--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,19 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="main.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="estilos.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton&display=swap&subset=latin-ext,vietnamese" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="estilos.css">
   <title>Encuesta WebSocket</title>
 </head>
 
 <body>
+    <div class="contenedor">
+        <h3>QUE TIPO DE LENJUAGE TE GUSTARIA APRENDER.<span>&#160;</span></h3>
+    </div>
+
   <div class="container">
     <div class="box">
       <p id="1" class="number">0</p>
